--- a/bevy-getting-started/Cargo.toml
+++ b/bevy-getting-started/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "rapier-getting-started"
+name = "bevy-getting-started"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rapier3d = { version = "0.14.0", features = [ "simd-stable" ] }
-
+bevy = "0.7.0"
