--- a/local-app/Cargo.toml
+++ b/local-app/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "bevy-getting-started"
+name = "local-app"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.8.0", features = [ ] }
+bevy = "0.7.0"
+bevy_rapier3d = "0.15.0"
+
+[profile.dev.package.bevy_rapier3d]
+opt-level = 3
