switch to native es6 module

--- a/simple-ball/package.json
+++ b/simple-ball/package.json
@@ -5,8 +5,8 @@
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "npx http-server",
+    "build": "echo 'nothing'"
   },
   "author": "",
   "license": "Apache-2.0",
