--- a/simple-ball/package.json
+++ b/simple-ball/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "npx http-server",
+    "start": "npx http-server -c-1",
     "build": "echo 'nothing'"
   },
   "author": "",
