--- a/simple-ball/engine/Cargo.toml
+++ b/simple-ball/engine/Cargo.toml
@@ -12,3 +12,6 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 rapier3d = { version = "*", features = [ "wasm-bindgen", "enhanced-determinism" ] }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
