--- a/simple-ball/engine/Cargo.toml
+++ b/simple-ball/engine/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
+web-sys = { version = "0.3", features = [ "Window", "Performance" ] }
 rapier3d = { version = "*", features = [ "wasm-bindgen", "enhanced-determinism" ] }
 image = "0.24"
 
