--- a/simple-ball/engine/Cargo.toml
+++ b/simple-ball/engine/Cargo.toml
@@ -15,8 +15,8 @@ web-sys = { version = "0.3", features = [ "Window", "Performance" ] }
 rapier3d = { version = "*", features = [ "wasm-bindgen", "enhanced-determinism" ] }
 image = "0.24"
 getrandom = { version = "0.2", features = ["js"] }
-rand = "0.7"
-roulette-wheel = "0.2"
+rand = "0.8"
+# roulette-wheel = "0.2"
 console_error_panic_hook = "0.1"
 
 [dev-dependencies]
